--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
 .idea
 
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+
 # Logs
 logs
 *.log
@@ -43,8 +61,6 @@ build/Release
 node_modules/
 jspm_packages/
 
-# production
-/build
 
 # production
 /build
